--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -114,7 +114,7 @@
 			</div>
 			<div class="col col-6">
 				<div class="contact-details">
-					<h2>KC Technologies, Martha Halli, Bangalore.</h2>
+					<h2>RCC, Atlanta</h2>
 					<p> <b>Phone/Whatsapp  : </b> <a href="tel:8123997688">8123997688</a> / <a href="tel:7013558586">7013558586</a></p>
 					<p><b>Email : </b><a href="mailto:sample@sample.com">kctechnologiesdevops@gmail.com</a></p>
 					
